JSON parsing, datatime, window, aggregate functions added

--- a/5-Transformations.ipynb
+++ b/5-Transformations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3574,12 +3574,431 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### JSON Parsing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### from_json()\n",
+    "Parse JSON string column to MapType or StructType"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-----------------------------------------------+\n",
+      "|id |props                                          |\n",
+      "+---+-----------------------------------------------+\n",
+      "|100|{\"name\": \"Paul\", \"salary\": 32000, \"dept\": \"IT\"}|\n",
+      "|101|{\"name\": \"Tina\", \"salary\": 45000, \"dept\": \"HR\"}|\n",
+      "|102|{\"name\": \"John\", \"salary\": 28000, \"dept\": \"IT\"}|\n",
+      "+---+-----------------------------------------------+\n",
+      "\n",
+      "root\n",
+      " |-- id: long (nullable = true)\n",
+      " |-- props: string (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = [\n",
+    "    (100, '{\"name\": \"Paul\", \"salary\": 32000, \"dept\": \"IT\"}'), \\\n",
+    "    (101, '{\"name\": \"Tina\", \"salary\": 45000, \"dept\": \"HR\"}'), \\\n",
+    "    (102, '{\"name\": \"John\", \"salary\": 28000, \"dept\": \"IT\"}')\n",
+    "]\n",
+    "\n",
+    "df = spark.createDataFrame(data=data, schema=[\"id\", \"props\"])\n",
+    "df.show(truncate=False)\n",
+    "df.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#spark.stop()"
+    "from pyspark.sql.types import StringType, MapType\n",
+    "\n",
+    "propsMapSchema = MapType(StringType(), StringType())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-------------------------------------------+\n",
+      "|id |props                                      |\n",
+      "+---+-------------------------------------------+\n",
+      "|100|{name -> Paul, salary -> 32000, dept -> IT}|\n",
+      "|101|{name -> Tina, salary -> 45000, dept -> HR}|\n",
+      "|102|{name -> John, salary -> 28000, dept -> IT}|\n",
+      "+---+-------------------------------------------+\n",
+      "\n",
+      "root\n",
+      " |-- id: long (nullable = true)\n",
+      " |-- props: map (nullable = true)\n",
+      " |    |-- key: string\n",
+      " |    |-- value: string (valueContainsNull = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql.functions import from_json\n",
+    "\n",
+    "maptype_df = df.withColumn(\"props\", from_json(col=\"props\", schema=propsMapSchema))\n",
+    "maptype_df.show(truncate=False)\n",
+    "maptype_df.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+\n",
+      "|name|\n",
+      "+----+\n",
+      "|Paul|\n",
+      "|Tina|\n",
+      "|John|\n",
+      "+----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "maptype_df.select(maptype_df.props[\"name\"].alias(\"name\")).show(truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-----------------------------------------------+\n",
+      "|id |props                                          |\n",
+      "+---+-----------------------------------------------+\n",
+      "|100|{\"name\": \"Paul\", \"salary\": 32000, \"dept\": \"IT\"}|\n",
+      "|101|{\"name\": \"Tina\", \"salary\": 45000, \"dept\": \"HR\"}|\n",
+      "|102|{\"name\": \"John\", \"salary\": 28000, \"dept\": \"IT\"}|\n",
+      "+---+-----------------------------------------------+\n",
+      "\n",
+      "root\n",
+      " |-- id: long (nullable = true)\n",
+      " |-- props: string (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.show(truncate=False)\n",
+    "df.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.types import StructType, StructField, StringType, FloatType\n",
+    "\n",
+    "propsStructSchema = StructType([StructField(\"name\", StringType()), StructField(\"salary\", FloatType()), StructField(\"dept\", StringType())])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-------------------+\n",
+      "|id |props              |\n",
+      "+---+-------------------+\n",
+      "|100|{Paul, 32000.0, IT}|\n",
+      "|101|{Tina, 45000.0, HR}|\n",
+      "|102|{John, 28000.0, IT}|\n",
+      "+---+-------------------+\n",
+      "\n",
+      "root\n",
+      " |-- id: long (nullable = true)\n",
+      " |-- props: struct (nullable = true)\n",
+      " |    |-- name: string (nullable = true)\n",
+      " |    |-- salary: float (nullable = true)\n",
+      " |    |-- dept: string (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql.functions import from_json\n",
+    "\n",
+    "struct_df = df.withColumn(\"props\", from_json(col=\"props\", schema=propsStructSchema))\n",
+    "struct_df.show(truncate=False)\n",
+    "struct_df.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+\n",
+      "|name|\n",
+      "+----+\n",
+      "|Paul|\n",
+      "|Tina|\n",
+      "|John|\n",
+      "+----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "struct_df.select(struct_df.props[\"name\"].alias(\"name\")).show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### to_json()\n",
+    "Convert MapType or StructType column to JSON String"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+--------------------------------------------+\n",
+      "|id |props                                       |\n",
+      "+---+--------------------------------------------+\n",
+      "|100|{\"name\":\"Paul\",\"salary\":32000.0,\"dept\":\"IT\"}|\n",
+      "|101|{\"name\":\"Tina\",\"salary\":45000.0,\"dept\":\"HR\"}|\n",
+      "|102|{\"name\":\"John\",\"salary\":28000.0,\"dept\":\"IT\"}|\n",
+      "+---+--------------------------------------------+\n",
+      "\n",
+      "root\n",
+      " |-- id: long (nullable = true)\n",
+      " |-- props: string (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql.functions import to_json\n",
+    "\n",
+    "json_df = struct_df.withColumn(\"props\", to_json(col=\"props\"))\n",
+    "json_df.show(truncate=False)\n",
+    "json_df.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### json_tuple()\n",
+    "Extract or query fields of JSON string columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+----+\n",
+      "|id |name|\n",
+      "+---+----+\n",
+      "|100|Paul|\n",
+      "|101|Tina|\n",
+      "|102|John|\n",
+      "+---+----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "struct_df.select(struct_df.id, struct_df.props[\"name\"].alias(\"name\")).show(truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This will throw error as props type is string\n",
+    "#json_df.select(json_df.id, json_df.props[\"name\"].alias(\"name\")).show(truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+----+-------+----+\n",
+      "|id |name|salary |dept|\n",
+      "+---+----+-------+----+\n",
+      "|100|Paul|32000.0|IT  |\n",
+      "|101|Tina|45000.0|HR  |\n",
+      "|102|John|28000.0|IT  |\n",
+      "+---+----+-------+----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql.functions import json_tuple\n",
+    "json_df.select(json_df.id, json_tuple(json_df.props, \"name\", \"salary\", \"dept\").alias(\"name\", \"salary\", \"dept\")).show(truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### get_json_object()\n",
+    "Extract JSON string from a specified path. Returns JSON string as output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-------------------------------------------------------------------------------+\n",
+      "|id |props                                                                          |\n",
+      "+---+-------------------------------------------------------------------------------+\n",
+      "|100|{\"name\": \"Paul\", \"salary\": 32000, \"address\": {\"country\": \"US\", \"state\": \"NC\"} }|\n",
+      "|101|{\"name\": \"Tina\", \"salary\": 45000, \"address\": {\"country\": \"US\", \"state\": \"CA\"} }|\n",
+      "+---+-------------------------------------------------------------------------------+\n",
+      "\n",
+      "root\n",
+      " |-- id: long (nullable = true)\n",
+      " |-- props: string (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = [\n",
+    "    (100, '{\"name\": \"Paul\", \"salary\": 32000, \"address\": {\"country\": \"US\", \"state\": \"NC\"} }'), \\\n",
+    "    (101, '{\"name\": \"Tina\", \"salary\": 45000, \"address\": {\"country\": \"US\", \"state\": \"CA\"} }')\n",
+    "]\n",
+    "\n",
+    "df = spark.createDataFrame(data=data, schema=[\"id\", \"props\"])\n",
+    "df.show(truncate=False)\n",
+    "df.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-----------------------------+\n",
+      "|id |address                      |\n",
+      "+---+-----------------------------+\n",
+      "|100|{\"country\":\"US\",\"state\":\"NC\"}|\n",
+      "|101|{\"country\":\"US\",\"state\":\"CA\"}|\n",
+      "+---+-----------------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql.functions import get_json_object\n",
+    "df.select(df.id, get_json_object(col=df.props, path=\"$.address\").alias(\"address\")).show(truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+----+-----+\n",
+      "|id |name|state|\n",
+      "+---+----+-----+\n",
+      "|100|Paul|NC   |\n",
+      "|101|Tina|CA   |\n",
+      "+---+----+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.select(\n",
+    "    df.id, \n",
+    "    get_json_object(col=df.props, path=\"$.name\").alias(\"name\"), \n",
+    "    get_json_object(col=df.props, path=\"$.address.state\").alias(\"state\")\n",
+    ").show(truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark.stop()"
    ]
   },
   {
